--- a/about.html
+++ b/about.html
@@ -29,14 +29,14 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto mb-2 mb-md-0">
               <li class="nav-item active">
-                <a class="nav-link" aria-current="page"href="./index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
               </li>
-							<li class="nav-item">
-								<a class="nav-link" aria-current="page" href="./work.html">Work</a>
-							</li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./work.html">Work</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="./about.html">About</a>
-							</li>
+              </li>
             </ul>
           </div>
         </div>
@@ -44,24 +44,15 @@
 		</header>
 		
 		<main id="home">
-			<h1 class="lg-heading">
-				Christian
-				<span class="heading-secondary">Sinai</span>
-			</h1>
-			<h2 class="sm-heading">
-				Full Stack Web Developer, Designer & Entrepreneur
-			</h2>
-			<div class="icons">
-				<a href="https://twitter.com/christian_sinai" target="blank">
-					<i class="fab fa-twitter fa-2x"></i>
-				</a>
-				<a href="https://www.linkedin.com/in/christiansinai/" target="blank">
-					<i class="fab fa-linkedin fa-2x"></i>
-				</a>
-				<a href="https://github.com/HumbleKind" target="blank">
-					<i class="fab fa-github fa-2x"></i>
-				</a>
-			</div>
+      <h1 class="lg-heading">
+        About
+        <span class="heading-secondary">Me</span>
+      </h1>
+      <h3 class="sm-heading">
+        <p>From teaching myself to code sites from scratch at the dawn of the web in the early 90s, to the unsuccessful launch of a tech startup I founded almost a decade ago, I'm finally coming full circle! Along the way, I earned a degree in Biochemistry, and a Masters of Architecture.</p>
+        <p class="btn btn-warning">christian_sinai@me.com</p>
+        <p class="mobile">(503) 260-9485</p>
+      </h3>
 		</main>
 
     <script 
