--- a/work.html
+++ b/work.html
@@ -51,16 +51,16 @@
       <div class="container">
         <div class="row">
           <div class="card" style="width: 20rem;">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
+            <img src="./assets/nerds-next-door.png" class="card-img-top" alt="Nerds Next Door">
             <div class="card-body">
-              <h3 class="card-title">Employee Directory</h3>
-              <p class="card-text">This Employee Directory app allows users to easily view, and quickly access non-sensitive employee information. It utilizes the React.js library to manage component state, and respond to user event/ requests, like sort and filter.</p>
-              <a class="btn btn-warning" href="https://github.com/HumbleKind/employee-directory" target="blank">GitHub</a>
-              <a class="btn btn-secondary" href="#">Deploy</a>
+              <h3 class="card-title">Nerds Next Door</h3>
+              <p class="card-text">From brand new systems to legacy machines that need tech advice.  Nerds Next Door is a resource for finding tech assistance with the device you need, at the time and place of your choosing.</p>
+              <a class="btn btn-warning" href="https://github.com/pabloivanjuarez/project-trios" target="blank">GitHub</a>
+              <a class="btn btn-secondary" href="https://nerdsnextdoor.herokuapp.com/">Deploy</a>
             </div>
           </div>
           <div class="card" style="width: 20rem;">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
+            <img src="./assets/screen-shot_1.png" class="card-img-top" alt="Burger Logger">
             <div class="card-body">
               <h3 class="card-title">Burger Logger</h3>
               <p class="card-text">Eat-Da-Burger! is a restaurant app that lets users input the names of burgers they'd like to eat. Whenever a user submits a burger's name, the app will display the burger on the left side of the page -- waiting to be devoured.</p>
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="card" style="width: 20rem;">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
+            <img src="./assets/weather-dashboard.png" class="card-img-top" alt="Weasther Dashboard">
             <div class="card-body">
               <h3 class="card-title">Weather Dashboard</h3>
               <p class="card-text">Using the OpenWeather API to retrieve weather data for cities, this weather dashboard runs in the browser and features dynamically updated HTML and CSS.</p>
