--- a/work.html
+++ b/work.html
@@ -44,41 +44,43 @@
 		</header>
 		
 		<main id="home">
+
       <h1 class="lg-heading">
         My
         <span class="heading-secondary">Work</span>
       </h1>
       <div class="container">
         <div class="row">
-          <div class="card" style="width: 20rem;">
+          <div class="card border-light" style="width: 20rem;">
             <img src="./assets/nerds-next-door.png" class="card-img-top" alt="Nerds Next Door">
             <div class="card-body">
               <h3 class="card-title">Nerds Next Door</h3>
               <p class="card-text">From brand new systems to legacy machines that need tech advice.  Nerds Next Door is a resource for finding tech assistance with the device you need, at the time and place of your choosing.</p>
-              <a class="btn btn-warning" href="https://github.com/pabloivanjuarez/project-trios" target="blank">GitHub</a>
-              <a class="btn btn-secondary" href="https://nerdsnextdoor.herokuapp.com/">Deploy</a>
+              <a class="btn btn-outline-warning" href="https://github.com/pabloivanjuarez/project-trios" target="blank">GitHub</a>
+              <a class="btn btn-outline-secondary" href="https://nerdsnextdoor.herokuapp.com/">Deploy</a>
             </div>
           </div>
-          <div class="card" style="width: 20rem;">
-            <img src="./assets/screen-shot_1.png" class="card-img-top" alt="Burger Logger">
+          <div class="card border-light" style="width: 20rem;">
+            <img src="./assets/burger-logger.png" class="card-img-top" alt="Burger Logger">
             <div class="card-body">
               <h3 class="card-title">Burger Logger</h3>
               <p class="card-text">Eat-Da-Burger! is a restaurant app that lets users input the names of burgers they'd like to eat. Whenever a user submits a burger's name, the app will display the burger on the left side of the page -- waiting to be devoured.</p>
-              <a class="btn btn-warning" href="https://github.com/HumbleKind/burger-logger" target="blank">GitHub</a>
-              <a class="btn btn-secondary" href="https://cs-burger-logger.herokuapp.com/">Deploy</a>
+              <a class="btn btn-outline-warning" href="https://github.com/HumbleKind/burger-logger" target="blank">GitHub</a>
+              <a class="btn btn-outline-secondary" href="https://cs-burger-logger.herokuapp.com/">Deploy</a>
             </div>
           </div>
-          <div class="card" style="width: 20rem;">
+          <div class="card border-light" style="width: 20rem;">
             <img src="./assets/weather-dashboard.png" class="card-img-top" alt="Weasther Dashboard">
             <div class="card-body">
               <h3 class="card-title">Weather Dashboard</h3>
               <p class="card-text">Using the OpenWeather API to retrieve weather data for cities, this weather dashboard runs in the browser and features dynamically updated HTML and CSS.</p>
-              <a class="btn btn-warning" href="https://github.com/HumbleKind/weather-dashboard" target="blank">GitHub</a>
-              <a class="btn btn-secondary" href="https://humblekind.github.io/weather-dashboard/">Deploy</a>
+              <a class="btn btn-outline-warning" href="https://github.com/HumbleKind/weather-dashboard" target="blank">GitHub</a>
+              <a class="btn btn-outline-secondary" href="https://humblekind.github.io/weather-dashboard/">Deploy</a>
             </div>
           </div>
         </div>
       </div>
+
 		</main>
 
     <script 
