--- a/work.html
+++ b/work.html
@@ -54,6 +54,10 @@
           <div class="card border-light" style="width: 20rem;">
             <img src="./assets/nerds-next-door.png" class="card-img-top" alt="Nerds Next Door">
             <div class="card-body">
+              <row>
+                <img src="https://img.shields.io/badge/firebase%20-%23039BE5.svg?&style=for-the-badge&logo=firebase" class="special-badge" alt="Firebase Badge" height="12%">
+                <img src="https://img.shields.io/badge/react%20-%2320232a.svg?&style=for-the-badge&logo=react&logoColor=%2361DAFB" class="special-badge" alt="React Badge" height="12%">
+              </row>
               <h3 class="card-title">Nerds Next Door</h3>
               <p class="card-text">From brand new systems to legacy machines that need tech advice.  Nerds Next Door is a resource for finding tech assistance with the device you need, at the time and place of your choosing.</p>
               <a class="btn btn-outline-warning" href="https://github.com/pabloivanjuarez/project-trios" target="blank">GitHub</a>
@@ -63,7 +67,11 @@
           <div class="card border-light" style="width: 20rem;">
             <img src="./assets/burger-logger.png" class="card-img-top" alt="Burger Logger">
             <div class="card-body">
-              <h3 class="card-title">Burger Logger</h3>
+              <row>
+                <img src="https://img.shields.io/badge/mysql-%2300f.svg?&style=for-the-badge&logo=mysql&logoColor=white" class="special-badge" alt="MySQL Badge" height="12%">
+                <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="12%">
+              </row>
+                <h3 class="card-title">Burger Logger</h3>
               <p class="card-text">Eat-Da-Burger! is a restaurant app that lets users input the names of burgers they'd like to eat. Whenever a user submits a burger's name, the app will display the burger on the left side of the page -- waiting to be devoured.</p>
               <a class="btn btn-outline-warning" href="https://github.com/HumbleKind/burger-logger" target="blank">GitHub</a>
               <a class="btn btn-outline-secondary" href="https://cs-burger-logger.herokuapp.com/">Deploy</a>
@@ -72,6 +80,7 @@
           <div class="card border-light" style="width: 20rem;">
             <img src="./assets/weather-dashboard.png" class="card-img-top" alt="Weasther Dashboard">
             <div class="card-body">
+              <img src="https://img.shields.io/badge/javascript%20-%23323330.svg?&style=for-the-badge&logo=javascript&logoColor=%23F7DF1E" class="special-badge" alt="JavaScript Badge" height="12%">
               <h3 class="card-title">Weather Dashboard</h3>
               <p class="card-text">Using the OpenWeather API to retrieve weather data for cities, this weather dashboard runs in the browser and features dynamically updated HTML and CSS.</p>
               <a class="btn btn-outline-warning" href="https://github.com/HumbleKind/weather-dashboard" target="blank">GitHub</a>
