updated about statement

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <span class="heading-secondary">Me</span>
       </h1>
       <h3 class="sm-heading">
-        <p>From teaching myself to code sites from scratch at the dawn of the web in the early 90s, to the unsuccessful launch of a tech startup I founded almost a decade ago, I'm finally coming full circle! Along the way, I earned a degree in Biochemistry, and a Masters of Architecture.</p>
+        <p>From teaching myself how to code and build sites from scratch in the early 90s, I'm finally coming full circle! Along the way, launched a tech startup, earned a BS in Biochemistry, and a Masters of Architecture.</p>
         <p class="btn btn-lg btn-outline-warning email">christian_sinai@me.com</p>
         <p class="mobile">(503) 260-9485</p>
       </h3>
