updated project cards

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
       </h1>
       <h3 class="sm-heading">
         <p>From teaching myself how to code and build sites from scratch in the early 90s, I'm finally coming full circle! Along the way, launched a tech startup, earned a BS in Biochemistry, and a Masters of Architecture.</p>
-        <p class="btn btn-lg btn-outline-warning email">christian_sinai@me.com</p>
+        <a href="mailto:christian_sinai@me.com" class="btn btn-lg btn-outline-warning email">christian_sinai@me.com</a>
         <p class="mobile">(503) 260-9485</p>
       </h3>
 		</main>
