--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
           <div class="navbar-brand">HumbleKind</div>
           <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -49,7 +49,7 @@
 				<span class="heading-secondary">Sinai</span>
 			</h1>
 			<h2 class="sm-heading">
-				Full Stack Web Developer, Designer & Entrepreneur
+				Web Developer, Architect, Manager, Designer & Entrepreneur
 			</h2>
 			<div class="icons">
 				<a href="https://twitter.com/christian_sinai" target="blank">
