minor margin tweeks for mobile

--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
         My
         <span class="heading-secondary">Work</span>
       </h1>
-      <div class="container">
+      <div>
         <div class="row">
           <!-- <div class="card border-light" style="width: 21rem;">
             <img src="./assets/nerds-next-door.png" class="card-img-top" alt="Nerds Next Door">
