added burger menu on collapse

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
     <header>
       <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <div class="navbar-brand">HumbleKind</div>
+					<div class="navbar-brand">HumbleKind</div>
+					
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+						data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+						aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto mb-2 mb-md-0">
               <li class="nav-item active">
