--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
 					</button>
 
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav ml-auto mb-2 mb-md-0">
+            <ul class="navbar-nav ml-auto mb-2 mb-sm-0">
               <li class="nav-item active">
                 <a class="nav-link" aria-current="page" href="./index.html">Home</a>
               </li>
