--- a/work.html
+++ b/work.html
@@ -75,8 +75,8 @@
             <img src="./assets/workout-tracker.png" class="card-img-top" alt="Workout Tracker">
             <div class="card-body">
               <row>
-                <img src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?&style=for-the-badge&logo=mongodb&logoColor=white" class="special-badge" alt="Mongo Badge" height="10%">
-                <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="10%">
+                <img src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?&style=for-the-badge&logo=mongodb&logoColor=white" class="special-badge" alt="Mongo Badge" height="9%">
+                <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="9%">
               </row>
                 <h3 class="card-title">Workout Tracker</h3>
               <p class="card-text">This app allows users to view, create, and track workouts, each containing a subset log of multiple exercises on any given day.</p>
@@ -88,9 +88,9 @@
             <img src="./assets/burger-logger.png" class="card-img-top" alt="Burger Logger">
             <div class="card-body">
               <row>
-                <img src="https://img.shields.io/badge/node.js%20-%2343853D.svg?&style=for-the-badge&logo=node.js&logoColor=white" class="special-badge" alt="Node Badge" height="10%">
-                <img src="https://img.shields.io/badge/mysql-%2300f.svg?&style=for-the-badge&logo=mysql&logoColor=white" class="special-badge" alt="MySQL Badge" height="10%">
-                <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="10%">
+                <img src="https://img.shields.io/badge/node.js%20-%2343853D.svg?&style=for-the-badge&logo=node.js&logoColor=white" class="special-badge" alt="Node Badge" height="9%">
+                <img src="https://img.shields.io/badge/mysql-%2300f.svg?&style=for-the-badge&logo=mysql&logoColor=white" class="special-badge" alt="MySQL Badge" height="9%">
+                <!-- <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="9%"> -->
               </row>
                 <h3 class="card-title">Burger Logger</h3>
               <p class="card-text">Eat-Da-Burger! is a restaurant app that lets users input and 'consume' burgers that they'd like to eat. Whenever a user submits a burger's name, the app will display the burger on the left side of the page -- waiting to be devoured.</p>
@@ -101,7 +101,7 @@
           <div class="card border-light" style="width: 19rem;">
             <img src="./assets/weather-dashboard.png" class="card-img-top" alt="Weasther Dashboard">
             <div class="card-body">
-              <img src="https://img.shields.io/badge/javascript%20-%23323330.svg?&style=for-the-badge&logo=javascript&logoColor=%23F7DF1E" class="special-badge" alt="JavaScript Badge" height="10%">
+              <img src="https://img.shields.io/badge/javascript%20-%23323330.svg?&style=for-the-badge&logo=javascript&logoColor=%23F7DF1E" class="special-badge" alt="JavaScript Badge" height="9%">
               <h3 class="card-title">Weather Dashboard</h3>
               <p class="card-text">An OpenWeather API app that retrieves and displays dynamically updated HTML/ CSS weather data for cities.</p>
               <a class="btn btn-sm btn-outline-warning" href="https://github.com/HumbleKind/weather-dashboard" target="blank">GitHub</a>
