--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto mb-2 mb-sm-0">
               <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="./portfolio.html">Home</a>
               </li>
 							<li class="nav-item">
 								<a class="nav-link" aria-current="page" href="./work.html">Work</a>
