added LinkedIn link content info

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,15 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<!-- LinkedIn 'Link' content info -->
+		<meta name="description" content="HumbleKind - Portfolio" />
+		<meta name="title" property="og:title" content="Portfolio" />
+		<meta property="og:type" content="Website" />
+		<meta name="image" property="og:image" content="https://github.com/HumbleKind/humblekind.github.io/blob/master/assets/background.jpeg" />
+		<meta name="description" property="og:description" content="HumbleKind - Portfolio" />
+		<meta name="author" content="Christian Sinai" />
 
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
