changed LinkedIn photo link

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="HumbleKind - Portfolio" />
 		<meta name="title" property="og:title" content="Portfolio" />
 		<meta property="og:type" content="Website" />
-		<meta name="image" property="og:image" content="https://github.com/HumbleKind/humblekind.github.io/blob/master/assets/background.jpeg" />
+		<meta name="image" property="og:image" content="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NXx8Y29kaW5nfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80" />
 		<meta name="description" property="og:description" content="HumbleKind - Portfolio" />
 		<meta name="author" content="Christian Sinai" />
 
