updated work and styling

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         <span class="heading-secondary">Me</span>
       </h1>
       <h3 class="sm-heading">
-        <p>From teaching myself how to code and build sites from scratch in the early 90s, I'm finally coming full circle! Along the way, launched a tech startup, earned a BS in Biochemistry, and a Masters of Architecture.</p>
+        <p>From teaching myself how to code and build sites from scratch in the early 90s, I'm finally coming full circle! Along the way, earned a BS in Biochemistry, a Masters of Architecture, and launched a tech startup.</p>
         <a href="mailto:christian_sinai@me.com" class="btn btn-lg btn-outline-warning email">christian_sinai@me.com</a>
         <p class="mobile">(503) 260-9485</p>
       </h3>
