--- a/work.html
+++ b/work.html
@@ -58,56 +58,59 @@
       </h1>
       <div>
         <div class="row">
-          <!-- <div class="card border-light" style="width: 21rem;">
-            <img src="./assets/nerds-next-door.png" class="card-img-top" alt="Nerds Next Door">
-            <div class="card-body">
-              <row>
-                <img src="https://img.shields.io/badge/react%20-%2320232a.svg?&style=for-the-badge&logo=react&logoColor=%2361DAFB" class="special-badge" alt="React Badge" height="10%">
-                <img src="https://img.shields.io/badge/firebase%20-%23039BE5.svg?&style=for-the-badge&logo=firebase" class="special-badge" alt="Firebase Badge" height="10%">
-              </row>
+
+          <div class="frame">
+            <div class="image" style="background-image: url(./assets/nerds-next-door.png); background-size: contain;"></div>
+            <div class="content">
+              <img src="https://img.shields.io/badge/react%20-%2320232a.svg?&style=for-the-badge&logo=react&logoColor=%2361DAFB" class="special-badge" alt="React Badge" height="20rem">
+              <img src="https://img.shields.io/badge/firebase%20-%23039BE5.svg?&style=for-the-badge&logo=firebase" class="special-badge" alt="Firebase Badge" height="20rem">
               <h3 class="card-title">Nerds Next Door</h3>
-              <p class="card-text">From brand new systems to legacy machines that need tech advice.  Nerds Next Door is a resource for finding tech assistance for any device, at the time and place of your choosing.</p>
+              <p class="content-text-tech">Technologies: MERN Stack, Firebase, Concurrently, Mapbox, InVision</p>
+              <p class="content-text">From brand new systems to legacy machines that need tech advice.  Nerds Next Door is a resource for finding tech assistance for any device, at the time and place of your choosing.</p>
               <a class="btn btn-sm btn-outline-warning" href="https://github.com/HumbleKind/nerds-next-door" target="blank">GitHub</a>
               <a class="btn btn-sm btn-outline-secondary" href="https://nerdsnextdoor.herokuapp.com/" target="blank">Deploy</a>
             </div>
-          </div> -->
-          <div class="card border-light" style="width: 19rem;">
-            <img src="./assets/workout-tracker.png" class="card-img-top" alt="Workout Tracker">
-            <div class="card-body">
-              <row>
-                <img src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?&style=for-the-badge&logo=mongodb&logoColor=white" class="special-badge" alt="Mongo Badge" height="9%">
-                <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="9%">
-              </row>
-                <h3 class="card-title">Workout Tracker</h3>
-              <p class="card-text">This app allows users to view, create, and track workouts, each containing a subset log of multiple exercises on any given day.</p>
+          </div>
+
+          <div class="frame">
+            <div class="image" style="background-image: url(./assets/workout-tracker.png); background-size: contain;"></div>
+            <div class="content">
+              <img src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?&style=for-the-badge&logo=mongodb&logoColor=white" class="special-badge" alt="Mongo Badge" height="20rem">
+              <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="20rem">
+              <h3 class="card-title">Workout Tracker</h3>
+              <p class="content-text-tech">Technologies: CRUD, ODM, NoSQL, MongoDB Atlas, Mongoose Schema, Node, Express, Nodemon, Heroku</p>
+              <p class="content-text">This app allows users to view, create, and track workouts, each containing a subset log of multiple exercises on any given day.</p>
               <a class="btn btn-sm btn-outline-warning" href="https://github.com/HumbleKind/workout-tracker" target="blank">GitHub</a>
               <a class="btn btn-sm btn-outline-secondary" href="https://cs-workout-tracker.herokuapp.com" target="blank">Deploy</a>
             </div>
           </div>
-          <div class="card border-light" style="width: 19rem;">
-            <img src="./assets/burger-logger.png" class="card-img-top" alt="Burger Logger">
-            <div class="card-body">
-              <row>
-                <img src="https://img.shields.io/badge/node.js%20-%2343853D.svg?&style=for-the-badge&logo=node.js&logoColor=white" class="special-badge" alt="Node Badge" height="9%">
-                <img src="https://img.shields.io/badge/mysql-%2300f.svg?&style=for-the-badge&logo=mysql&logoColor=white" class="special-badge" alt="MySQL Badge" height="9%">
-                <!-- <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="9%"> -->
-              </row>
-                <h3 class="card-title">Burger Logger</h3>
-              <p class="card-text">Eat-Da-Burger! is a restaurant app that lets users input and 'consume' burgers that they'd like to eat. Whenever a user submits a burger's name, the app will display the burger on the left side of the page -- waiting to be devoured.</p>
+
+          <div class="frame">
+            <div class="image" style="background-image: url(./assets/burger-logger.png); background-size: contain;"></div>
+            <div class="content">
+              <img src="https://img.shields.io/badge/node.js%20-%2343853D.svg?&style=for-the-badge&logo=node.js&logoColor=white" class="special-badge" alt="Node Badge" height="20rem">
+              <img src="https://img.shields.io/badge/mysql-%2300f.svg?&style=for-the-badge&logo=mysql&logoColor=white" class="special-badge" alt="MySQL Badge" height="20rem">
+              <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="20rem">
+              <h3 class="card-title">Burger Logger</h3>
+              <p class="content-text-tech">Technologies: MVC, ORM, MySQL, Sequelize Schema, Handlebars, Node, Express, Handlebars, Heroku</p>
+              <p class="content-text">Eat-Da-Burger! is a restaurant app that lets users input and 'consume' burgers that they'd like to eat. Whenever a user submits a burger's name, the app will display the burger on the left side of the page -- waiting to be devoured.</p>
               <a class="btn btn-sm btn-outline-warning" href="https://github.com/HumbleKind/burger-logger" target="blank">GitHub</a>
               <a class="btn btn-sm btn-outline-secondary" href="https://cs-burger-logger.herokuapp.com" target="blank">Deploy</a>
             </div>
           </div>
-          <div class="card border-light" style="width: 19rem;">
-            <img src="./assets/weather-dashboard.png" class="card-img-top" alt="Weasther Dashboard">
-            <div class="card-body">
-              <img src="https://img.shields.io/badge/javascript%20-%23323330.svg?&style=for-the-badge&logo=javascript&logoColor=%23F7DF1E" class="special-badge" alt="JavaScript Badge" height="9%">
+
+          <div class="frame">
+            <div class="image" style="background-image: url(./assets/weather-dashboard.png); background-size: contain;"></div>
+            <div class="content">
+              <img src="https://img.shields.io/badge/javascript%20-%23323330.svg?&style=for-the-badge&logo=javascript&logoColor=%23F7DF1E" class="special-badge" alt="JavaScript Badge" height="20rem">
               <h3 class="card-title">Weather Dashboard</h3>
-              <p class="card-text">An OpenWeather API app that retrieves and displays dynamically updated HTML/ CSS weather data for cities.</p>
+              <p class="content-text-tech">Technologies: JavaScript, jQuery, HTML5, CSS3, AJAX, Server-Side APIs</p>
+              <p class="content-text">An OpenWeather API app that retrieves and displays dynamically updated HTML/ CSS weather data for cities.</p>
               <a class="btn btn-sm btn-outline-warning" href="https://github.com/HumbleKind/weather-dashboard" target="blank">GitHub</a>
               <a class="btn btn-sm btn-outline-secondary" href="https://humblekind.github.io/weather-dashboard" target="blank">Deploy</a>
             </div>
           </div>
+
         </div>
       </div>
 
