--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 		<meta name="title" property="og:title" content="Portfolio" />
 		<meta property="og:type" content="Website" />
 		<meta name="image" property="og:image" content="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NXx8Y29kaW5nfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80" />
-		<meta name="description" property="og:description" content="HumbleKind - Portfolio" />
+		<meta name="description" property="og:description" content="From teaching myself how to code and build sites from scratch in the early 90s, I'm finally coming full circle! Along the way, launched a tech startup, earned a BS in Biochemistry, and a Masters of Architecture." />
 		<meta name="author" content="Christian Sinai" />
 
     <link 
