reset profile pic to relative

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
       </h1>
       <h3 class="sm-heading">
         <p>From teaching myself how to code and build sites from scratch in the early 90s, I'm finally coming full circle! Along the way, earned a BS in Biochemistry, a Masters of Architecture, and launched a tech startup.</p>
-        <div class="profile-pic" style="background-image: url(https://github.com/HumbleKind/humblekind.github.io/blob/master/assets/profile-picture.jpg); background-size: contain;"></div><br />
+        <div class="profile-pic" style="background-image: url(./assets/profile-picture.jpg); background-size: contain;"></div><br />
         <a href="mailto:christian_sinai@me.com" class="btn btn-lg email">christian_sinai@me.com</a>
         <p class="mobile">(503) 260-9485</p>
       </h3>
