updated work details

--- a/work.html
+++ b/work.html
@@ -65,8 +65,8 @@
               <img src="https://img.shields.io/badge/react%20-%2320232a.svg?&style=for-the-badge&logo=react&logoColor=%2361DAFB" class="special-badge" alt="React Badge" height="20rem">
               <img src="https://img.shields.io/badge/firebase%20-%23039BE5.svg?&style=for-the-badge&logo=firebase" class="special-badge" alt="Firebase Badge" height="20rem">
               <h3 class="card-title">Nerds Next Door</h3>
-              <p class="content-text-tech">Technologies: MERN Stack, Firebase, Concurrently, Mapbox, InVision</p>
-              <p class="content-text">From brand new systems to legacy machines that need tech advice.  Nerds Next Door is a resource for finding tech assistance for any device, at the time and place of your choosing.</p>
+              <p class="content-text-tech">Technologies: MERN Stack, Firebase, Concurrently, Mapbox, InVision, Heroku</p>
+              <p class="content-text">Solely responsible for Firebase user login/ authentication and MongoDB integration, and deployment. From brand new systems to legacy machines that need tech advice. Nerds Next Door is a resource for finding tech assistance for any device, from local experts, literally next door!</p>
               <a class="btn btn-sm btn-outline-warning" href="https://github.com/HumbleKind/nerds-next-door" target="blank">GitHub</a>
               <a class="btn btn-sm btn-outline-secondary" href="https://nerdsnextdoor.herokuapp.com/" target="blank">Deploy</a>
             </div>
@@ -105,7 +105,7 @@
               <img src="https://img.shields.io/badge/javascript%20-%23323330.svg?&style=for-the-badge&logo=javascript&logoColor=%23F7DF1E" class="special-badge" alt="JavaScript Badge" height="20rem">
               <h3 class="card-title">Weather Dashboard</h3>
               <p class="content-text-tech">Technologies: JavaScript, jQuery, HTML5, CSS3, AJAX, Server-Side APIs</p>
-              <p class="content-text">An OpenWeather API app that retrieves and displays dynamically updated HTML/ CSS weather data for cities.</p>
+              <p class="content-text">An OpenWeather API app that retrieves and displays dynamically updated HTML and CSS weather data for cities.</p>
               <a class="btn btn-sm btn-outline-warning" href="https://github.com/HumbleKind/weather-dashboard" target="blank">GitHub</a>
               <a class="btn btn-sm btn-outline-secondary" href="https://humblekind.github.io/weather-dashboard" target="blank">Deploy</a>
             </div>
