--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
     <header>
       <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-					<div class="navbar-brand">HumbleKind</div>
+					<!-- <div class="navbar-brand">HumbleKind</div> -->
 					
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 						data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
@@ -42,7 +42,7 @@
 					</button>
 
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav ml-auto mb-2 mb-sm-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
               <li class="nav-item active">
                 <a class="nav-link" aria-current="page" href="./portfolio.html">Home</a>
               </li>
@@ -51,6 +51,9 @@
 							</li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="./about.html">About</a>
+							</li>
+							<li class="nav-item">
+								<div class="navbar-brand">HumbleKind</div>
 							</li>
             </ul>
           </div>
