--- a/work.html
+++ b/work.html
@@ -96,7 +96,7 @@
               <img src="https://img.shields.io/badge/mysql-%2300f.svg?&style=for-the-badge&logo=mysql&logoColor=white" class="special-badge" alt="MySQL Badge" height="20rem">
               <img src="https://img.shields.io/badge/heroku%20-%23430098.svg?&style=for-the-badge&logo=heroku&logoColor=white" class="special-badge" alt="Heroku Badge" height="20rem">
               <h3 class="card-title">Burger Logger</h3>
-              <p class="content-text-tech">Technologies: MVC, ORM, MySQL, Sequelize Schema, Node, Express, Handlebars, Heroku</p>
+              <p class="content-text-tech">Technologies: MVC, Custom ORM, MySQL, Node, Express, Handlebars, Heroku</p>
               <p class="content-text">Eat-Da-Burger! is a restaurant app that lets users input and 'consume' burgers that they'd like to eat. Whenever a user submits a burger's name, the app will display the burger on the left side of the page -- waiting to be devoured.</p>
               <a class="btn btn-sm btn-outline-warning" href="https://github.com/HumbleKind/burger-logger" target="blank">GitHub</a>
               <a class="btn btn-sm btn-outline-secondary" href="https://cs-burger-logger.herokuapp.com" target="blank">Deploy</a>
